--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "register": "node register.js"
+    "register": "node registerService.js"
   },
   "author": "king-mob",
   "license": "GPL-3.0-or-later",
   "dependencies": {
     "dotenv": "^16.3.1",
     "matrix-appservice": "^2.0.0",
-    "node-fetch": "^3.3.1"
+    "node-fetch": "^3.3.1",
+    "uuid": "^9.0.0"
   },
   "type": "module"
 }
