add the read me

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@ HOST=host.docker.internal
 HOME_SERVER=
 HOME_SERVER_TOKEN=
 APPLICATION_TOKEN=
+
+#DISCORD_PUBLIC_KEY=
+#DISCORD_APP_ID=
+#DISCORD_TOKEN=
