--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "king-mob",
   "license": "GPL-3.0-or-later",
   "dependencies": {
+    "discord-interactions": "^3.4.0",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "matrix-appservice": "^2.0.0",
     "node-fetch": "^3.3.1",
     "uuid": "^9.0.0"
