--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "matrix-appservice": "^2.0.0",
+    "matrix-js-sdk": "^31.2.0",
     "node-fetch": "^3.3.1",
     "uuid": "^9.0.0"
   },
