--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "type": "module",
   "devDependencies": {
     "@types/node": "^20.11.24",
+    "@types/react": "^18.2.64",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
     "os-browserify": "^0.3.0",
