--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node index.js",
     "register": "node registerService.js",
     "register-discord": "node discord/registerDiscord.js",
-    "dev-web": "parcel newweb/index.html --dist-dir ./dist-web",
+    "dev-web": "parcel web/index.html --dist-dir ./dist-web",
     "build-web": "shx rm -rf dist-web && parcel build web/index.html --dist-dir ./dist-web"
   },
   "author": "king-mob",
