--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.0",
   "description": "a matrix application service to run a space tube instance",
   "scripts": {
-    "start": "node index.js",
+    "start": "node dist-server/index.js",
     "register": "node registerService.js",
     "register-discord": "node discord/registerDiscord.js",
     "dev-web": "parcel web/index.html --dist-dir ./dist-web",
-    "build-web": "shx rm -rf dist-web && parcel build web/index.html --dist-dir ./dist-web --no-cache"
+    "dev-server": "npx tsc && node dist-server/index.js",
+    "build-web": "shx rm -rf dist-web && parcel build web/index.html --dist-dir ./dist-web --no-cache",
+    "build-server": "npx tsc"
   },
   "author": "king-mob",
   "license": "GPL-3.0-or-later",
