--- a/package.json
+++ b/package.json
@@ -19,13 +19,12 @@
     "express": "^4.18.2",
     "matrix-appservice": "^2.0.0",
     "matrix-js-sdk": "^31.2.0",
-    "node-fetch": "^3.3.1",
     "parcel": "^2.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "typescript": "^5.4.5",
     "uuid": "^9.0.0"
   },
-  "type": "module",
   "devDependencies": {
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.64",
