--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,13 @@
 {
     "exclude": ["./web", "./dist-web"],
     "compilerOptions": {
+      "moduleResolution": "Node16",
       "jsx": "react-jsx",
       "target": "ES2016",
       "outDir": "./dist-server",
       "skipLibCheck": true,
       "esModuleInterop": true,
-      "module": "CommonJS"
+      "module": "Node16"
     }
   }
   
