move managment room id into env file

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@ HOME_SERVER=
 HOME_SERVER_TOKEN=
 APPLICATION_TOKEN=
 
+MANAGEMENT_ROOM_ID=
+
 #DISCORD_PUBLIC_KEY=
 #DISCORD_APP_ID=
 #DISCORD_TOKEN=
