--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node dist-server/index.js",
     "register": "node registerService.js",
+    "setup": "node dist-server/matrix/setup.js",
     "register-discord": "node discord/registerDiscord.js",
     "dev-web": "parcel web/index.html --dist-dir ./dist-web",
     "dev-server": "npx tsc && node dist-server/index.js",
