--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "matrix-appservice": "^2.0.0",
     "matrix-js-sdk": "^31.2.0",
+    "multer": "^1.4.5-lts.1",
     "parcel": "^2.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
