--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "king-mob",
   "license": "GPL-3.0-or-later",
   "dependencies": {
+    "@duckdb/node-api": "^1.2.1-alpha.17",
     "discord-interactions": "^3.4.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
