--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "parcel": "^2.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^7.5.0",
     "typescript": "^5.4.5",
     "uuid": "^9.0.0"
   },
