update invite code to include a hash and the homeserver and a connect command

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^7.5.0",
+    "sha1": "^1.1.1",
     "typescript": "^5.4.5",
     "uuid": "^9.0.0",
     "xkpasswd": "^1.0.5"
