add variables to example.env

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@ HOME_SERVER=
 HOME_SERVER_TOKEN=
 APPLICATION_TOKEN=
 
+INVITE_PREFIX=CoCoDoJo_
+
 MANAGEMENT_ROOM_ID=
 
 #DISCORD_PUBLIC_KEY=
@@ -13,3 +15,6 @@ MANAGEMENT_ROOM_ID=
 #WHATSAPP_HOME_SERVER=
 #WHATSAPP_USER_ID=
 #WHATSAPP_PASSWORD=
+
+SLACK_SECRET=
+SLACK_CLIENT_ID=
